@@ -3,7 +3,9 @@ Changes between 1.3.4 and 2.0.0dev0
 
 - pytest-2.0 is now its own package and depends on pylib-2.0
 - introduce a new way to set config options via ini-style files,
-  by default setup.cfg and tox.ini files are searched.
+  by default setup.cfg and tox.ini files are searched.  The old
+  ways (certain environment variables, dynamic conftest.py reading 
+  is removed).
 - fix issue126 - introduce py.test.set_trace() to trace execution via
   PDB during the running of tests even if capturing is ongoing.
 - fix issue123 - new "python -m py.test" invocation for py.test
